# xiaoai-assistant

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
tests/: test_config.py
xiaoai_assistant/: __init__.py  __main__.py  bot.py  cli.py  config.py  cookie_utils.py  llm_client.py  miio_client.py  mina_client.py  tts_client.py  web_server.py
